--- a/package.json
+++ b/package.json
@@ -27,6 +27,7 @@
     "clsx": "^2.1.0",
     "dropdown-menu": "^0.1.1",
     "heroicons": "^2.1.1",
+    "jsonwebtoken": "^9.0.2",
     "lucide-react": "^0.359.0",
     "mongodb": "^6.5.0",
     "next": "14.1.2",
