--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "@reduxjs/toolkit": "^2.2.1",
     "@tailwindcss/forms": "^0.5.7",
     "add": "^2.0.6",
+    "axios": "^1.6.8",
     "bcryptjs": "^2.4.3",
     "class-variance-authority": "^0.7.0",
     "clsx": "^2.1.0",
