--- a/package.json
+++ b/package.json
@@ -33,6 +33,7 @@
     "mongodb": "^6.5.0",
     "next": "14.1.2",
     "next-auth": "^4.24.7",
+    "node-cron": "^3.0.3",
     "react": "^18.2.0",
     "react-dom": "^18",
     "react-redux": "^9.1.0",
