--- a/package.json
+++ b/package.json
@@ -21,7 +21,7 @@
     "@radix-ui/react-dropdown-menu": "^2.0.6",
     "@radix-ui/react-label": "^2.1.0",
     "@radix-ui/react-popover": "^1.1.1",
-    "@radix-ui/react-slot": "^1.0.2",
+    "@radix-ui/react-slot": "^1.1.0",
     "@radix-ui/react-switch": "^1.1.0",
     "@radix-ui/react-tooltip": "^1.0.7",
     "@reduxjs/toolkit": "^2.2.1",
@@ -33,6 +33,7 @@
     "clsx": "^2.1.0",
     "cmdk": "^1.0.0",
     "dropdown-menu": "^0.1.1",
+    "embla-carousel-react": "^8.2.0",
     "framer-motion": "^11.3.19",
     "heroicons": "^2.1.1",
     "jsonwebtoken": "^9.0.2",
