--- a/package.json
+++ b/package.json
@@ -25,6 +25,8 @@
     "@radix-ui/react-switch": "^1.1.0",
     "@radix-ui/react-tooltip": "^1.0.7",
     "@reduxjs/toolkit": "^2.2.1",
+    "@stripe/react-stripe-js": "^2.8.0",
+    "@stripe/stripe-js": "^4.4.0",
     "@tailwindcss/forms": "^0.5.7",
     "add": "^2.0.6",
     "axios": "^1.7.3",
@@ -47,6 +49,7 @@
     "react-redux": "^9.1.0",
     "redux-persist": "^6.0.0",
     "shadcn-ui": "^0.8.0",
+    "stripe": "^16.9.0",
     "tailwind-merge": "^2.2.2",
     "tailwindcss-animate": "^1.0.7"
   },
